--- a/app/views/scores/show.html.erb
+++ b/app/views/scores/show.html.erb
@@ -1,4 +1,12 @@
+<% session[:referrer] = request.referrer %>
 <%= content_for :title, t('scores.title.show') %>
-<%= render layout: 'layouts/panel', locals: {title: 'Showing Score', resource: nil} do %>
-    <%= render partial: 'score', locals: {action: :show, score: @score} %>
+<%= render layout: 'layouts/jumbotron', locals: {title: @score.value, paginatable: nil} do %>
+    <div class="row">
+      <div class="col-md-6 col-xs-12">
+        <h4><%= link_to 'Delete', @score, method: :delete, data: {confirm: 'Are you sure?'} if can? :destroy, @score %></h4>
+      </div>
+      <div class="col-md-6 col-xs-12">
+        <%= render @score, locals: {score: @score} %>
+      </div>
+    </div>
 <% end %>
