--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,13 +1,3 @@
-<table class="table table-hover">
-  <tr class="row">
-    <th colspan="4">Body:</th>
-  </tr>
-  <tr class="row">
-    <td><%= comment.body %></td>
-    <td></td>
-    <td><%= link_to 'Edit', edit_comment_path(comment) if can? :update, comment %></td>
-    <td><%= link_to 'Delete', comment, method: :delete,
-                    data: {confirm: 'Are you sure?'} if can? :destroy, comment %></td>
-    <td></td>
-  </tr>
-</table>
+<h4>Goal: <%= link_to comment.goal.title, comment.goal %></h4>
+<h4>User: <%= link_to comment.user.name, comment.user %></h4>
+
