--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,23 +1,14 @@
-<table class="table table-hover">
-  <tr class="row">
-    <th colspan="3">Body:</th>
-    <% if params[:user_id] %>
-        <th>Goal:</th>
-    <% elsif params[:goal_id] %>
-        <th>User:</th>
-    <% end %>
-  </tr>
-  <% @comments.each do |comment| %>
-      <tr class="row">
-        <td><%= link_to comment.body, comment %></td>
-        <td><%= link_to 'Edit', edit_comment_path(comment) if can? :update, comment %></td>
-        <td><%= link_to 'Delete', comment, method: :delete,
-                        data: {confirm: 'Are you sure?'} if can? :destroy, comment %></td>
-        <% if params[:user_id] %>
-            <td><%= link_to comment.goal.title, comment.goal %></td>
-        <% elsif params[:goal_id] %>
-            <td><%= link_to comment.user.name, comment.user %></td>
-        <% end %>
-      </tr>
-  <% end %>
-</table>
+<% @comments.each do |comment| %>
+    <div class="row">
+      <div class="col-xs-12">
+        <h4><%= comment.body %></h4>
+        Goal: <%= link_to comment.goal.title, comment.goal %>,
+        User: <%= link_to comment.user.name, comment.user %>
+        <br>
+        <%= link_to 'Show', comment %>
+        <%= link_to 'Edit', edit_comment_path(comment) if can? :update, comment %>
+        <%= link_to 'Delete', comment, method: :delete, data: {confirm: 'Are you sure?'} if can? :destroy, comment %>
+      </div>
+    </div>
+    <hr>
+<% end %>
