--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,25 +1,18 @@
-<%= form_for(comment, url: {controller: :comments, action: action}, html: {class: 'form-horizontal'}) do |f| %>
+<%= errors_for comment %>
+<%= form_for(comment, url: {controller: :comments, action: action}, html: {class: 'form'}) do |f| %>
     <div class="form-group">
-      <%= f.label :body, class: 'col-sm-2 control-label' %>
-      <div class="col-sm-10">
-        <%= f.text_area :body, class: 'form-control', placeholder: 'Body' %>
-      </div>
-    </div>
-    <div>
+      <%= f.label :comment, class: 'control-label' %>
+      <%= f.text_area :body, class: 'form-control', placeholder: 'Body' %>
       <% if comment.goal %>
-          <%= f.hidden_field :goal_id, value: comment.goal.id %>
+          <%= f.hidden_field :goal_id, value: comment.goal_id %>
       <% else %>
-          <%= f.hidden_field :goal_id, value: goal.id %>
+          <%= f.hidden_field :goal_id, value: comment.goal.id %>
       <% end %>
       <% if comment.user %>
           <%= f.hidden_field :user_id, value: comment.user_id %>
       <% elsif user_signed_in? %>
           <%= f.hidden_field :user_id, value: current_user.id %>
       <% end %>
-    </div>
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <%= f.submit class: 'btn btn-default' %>
-      </div>
+      <%= f.submit class: 'btn btn-default' %>
     </div>
 <% end %>
