--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,4 +1,13 @@
+<% session[:referrer] = request.referrer %>
 <%= content_for :title, t('comments.title.edit') %>
-<%= render layout: 'layouts/panel', locals: {title: 'Editing Comment', resource: nil} do %>
-    <%= render partial: 'form', locals: {action: :update, comment: @comment} %>
+<%= render layout: 'layouts/jumbotron', locals: {title: @comment.body, paginatable: nil} do %>
+    <div class="row">
+      <div class="col-md-6 col-xs-12">
+        <h4><%= link_to 'Show', @comment %></h4>
+        <h4><%= link_to 'Delete', @comment, method: :delete, data: {confirm: 'Are you sure?'} if can? :destroy, @comment %></h4>
+      </div>
+      <div class="col-md-6 col-xs-12">
+        <%= render partial: 'form', locals: {action: :update, comment: @comment} %>
+      </div>
+    </div>
 <% end %>
