--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,4 +1,13 @@
+<% session[:referrer] = request.referrer %>
 <%= content_for :title, t('comments.title.show') %>
-<%= render layout: 'layouts/panel', locals: {title: 'Showing Comment', resource: nil} do %>
-    <%= render partial: 'comment', locals: {action: :show, comment: @comment} %>
+<%= render layout: 'layouts/jumbotron', locals: {title: @comment.body, paginatable: nil} do %>
+    <div class="row">
+      <div class="col-md-6 col-xs-12">
+        <h4><%= link_to 'Edit', edit_comment_path(@comment) if can? :update, @omment %></h4>
+        <h4><%= link_to 'Delete', @comment, method: :delete, data: {confirm: 'Are you sure?'} if can? :destroy, @comment %></h4>
+      </div>
+      <div class="col-md-6 col-xs-12">
+        <%= render @comment, locals: {comment: @comment} %>
+      </div>
+    </div>
 <% end %>
