--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,35 +1,35 @@
 <%= devise_error_messages! %>
 <%= content_for :title, t('users.registration.title.new') %>
-<%= render layout: 'layouts/panel', locals: {title: 'Sign up', resource: nil} do %>
+<%= render layout: 'layouts/jumbotron', locals: {title: 'Sign up', paginatable: nil} do %>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name),
                  html: {role: 'form', class: 'form-horizontal'}) do |f| %>
         <div class="authform">
           <div class="form-group">
-            <%= f.label :name, class: 'col-sm-4 control-label' %>
-            <div class="col-sm-8">
+            <%= f.label :name, class: 'col-sm-2 control-label' %>
+            <div class="col-sm-10">
               <%= f.text_field :name, autofocus: true, class: 'form-control', placeholder: 'Name' %>
             </div>
           </div>
           <div class="form-group">
-            <%= f.label :email, class: 'col-sm-4 control-label' %>
-            <div class="col-sm-8">
+            <%= f.label :email, class: 'col-sm-2 control-label' %>
+            <div class="col-sm-10">
               <%= f.email_field :email, class: 'form-control', placeholder: 'Email' %>
             </div>
           </div>
           <div class="form-group">
-            <%= f.label :password, class: 'col-sm-4 control-label' %>
-            <div class="col-sm-8">
+            <%= f.label :password, class: 'col-sm-2 control-label' %>
+            <div class="col-sm-10">
               <%= f.password_field :password, class: 'form-control', placeholder: 'Password' %>
             </div>
           </div>
           <div class="form-group">
-            <%= f.label :password_confirmation, class: 'col-sm-4 control-label' %>
-            <div class="col-sm-8">
+            <%= f.label :password_confirmation, class: 'col-sm-2 control-label' %>
+            <div class="col-sm-10">
               <%= f.password_field :password_confirmation, class: 'form-control', placeholder: 'Password' %>
             </div>
           </div>
           <div class="form-group">
-            <div class="col-sm-offset-4 col-sm-8">
+            <div class="col-sm-offset-2 col-sm-10">
               <%= f.submit 'Sign up', class: 'btn btn-default' %>
             </div>
           </div>
