--- a/app/views/goals/_goal.html.erb
+++ b/app/views/goals/_goal.html.erb
@@ -1,35 +1,21 @@
-<table class="table table-hover">
-  <tr class="row">
-    <td>Title: <b><%= goal.title %></b></td>
-    <td><%= link_to 'Edit', edit_goal_path(goal) if can? :update, goal %></td>
-    <td><%= link_to 'Delete', goal, method: :delete,
-                    data: {confirm: 'Are you sure?'} if can? :destroy, goal %></td>
-    <td></td>
-  </tr>
-  <tr class="row">
-    <td colspan="4">Text: <b><%= goal.text %></b></td>
-  </tr>
-  <tr class="row">
-    <td colspan="4">Score: <b><%= Score.total_for_goal goal %></b></td>
-  </tr>
-  <tr class="row">
-    <td colspan="4">User: <b><%= link_to goal.user.name, goal.user %></b></td>
-  </tr>
-  <% if user_signed_in? %>
-      <tr class="row">
-        <td colspan="4">
-          <% if subscription = Subscription.exists_for_goal_and_user?(goal, current_user) %>
-              <% if subscription.completed? %>
-                  Completed
-              <% else %>
-                  <%= link_to 'Unsubscribe', subscription, method: :delete %>&nbsp;|
-                  <%= link_to 'Complete', subscription_path(subscription, subscription: {completed: true}),
-                              method: :put %>
-              <% end %>
-          <% else %>
-              <b><%= link_to 'Subscribe', subscriptions_path(subscription: {goal_id: goal.id, user_id: current_user.id}),
-                             method: :post %></b>
-          <% end %></td>
-      </tr>
-  <% end %>
-</table>
+<h4>User: <%= link_to goal.user.name, goal.user %></h4>
+<h4>Score: <b><%= Score.total_for_goal goal %></b></h4>
+<h4>Text: <b><%= goal.text %></b></h4>
+<% if user_signed_in? %>
+    <% if subscription = Subscription.exists_for_goal_and_user?(goal, current_user) %>
+        <hr>
+        <% if subscription.completed? %>
+            <h4>Completed</h4>
+        <% else %>
+            <h4>
+              <%= link_to 'Unsubscribe', subscription, method: :delete %>,
+              <%= link_to 'Complete', subscription_path(subscription, subscription: {completed: true}), method: :put %>
+            </h4>
+        <% end %>
+    <% else %>
+        <hr>
+        <h4><%= link_to 'Subscribe', subscriptions_path(subscription: {goal_id: goal.id, user_id: current_user.id}), method: :post %></h4>
+    <% end %>
+<% end %>
+<hr>
+<%= render partial: 'comments/form', locals: {action: :create, comment: goal.comments.new, goal: goal} %>
