--- a/app/views/goals/_goals.html.erb
+++ b/app/views/goals/_goals.html.erb
@@ -1,23 +1,13 @@
-<table class="table table-hover">
-  <tr class="row">
-    <th colspan="3">Title:</th>
-    <% if params[:user_id] %>
-        <th></th>
-    <% else %>
-        <th>User:</th>
-    <% end %>
-  </tr>
-  <% @goals.each do |goal| %>
-      <tr class="row">
-        <td><%= link_to goal.title, goal %></td>
-        <td><%= link_to 'Edit', edit_goal_path(goal) if can? :update, goal %></td>
-        <td><%= link_to 'Delete', goal, method: :delete,
-                        data: {confirm: 'Are you sure?'} if can? :destroy, goal %></td>
-        <% if params[:user_id] %>
-            <td></td>
-        <% else %>
-            <td><%= link_to goal.user.name, goal.user %></td>
-        <% end %>
-      </tr>
-  <% end %>
-</table>
+<% @goals.each do |goal| %>
+    <div class="row">
+      <div class="col-xs-12">
+        <h4><%= goal.title %></h4>
+        User: <%= link_to goal.user.name, goal.user %>
+        <br>
+        <%= link_to 'Show', goal %>
+        <%= link_to 'Edit', edit_goal_path(goal) if can? :update, goal %>
+        <%= link_to 'Delete', goal, method: :delete, data: {confirm: 'Are you sure?'} if can? :destroy, goal %>
+      </div>
+    </div>
+    <hr>
+<% end %>
