--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -1,8 +1,15 @@
 <%= content_for :title, t('goals.title.show') %>
-<%= render layout: 'layouts/panel', locals: {title: 'Showing Goal', resource: nil} do %>
-    <%= render partial: 'goal', locals: {action: :show, goal: @goal} %>
-<% end %>
-<%= render layout: 'layouts/panel', locals: {title: 'New Comment', resource: nil} do %>
-    <%= render partial: 'comments/form',
-               locals: {action: :create, comment: @goal.comments.new, goal: @goal} %>
+<%= render layout: 'layouts/jumbotron', locals: {title: @goal.title, paginatable: nil} do %>
+    <div class="row">
+      <div class="col-md-6 col-xs-12">
+        <h4><%= link_to 'Edit', edit_goal_path(@goal) if can? :update, @goal %></h4>
+        <h4><%= link_to 'Delete', @goal, method: :delete, data: {confirm: 'Are you sure?'} if can? :destroy, @goal %></h4>
+        <h4><%= link_to 'Goal Comments', comments_path(goal_id: @goal.id) if @goal.comments.accessible_by(current_ability).present? %></h4>
+        <h4><%= link_to 'Goal Scores', scores_path(goal_id: @goal.id) if @goal.scores.accessible_by(current_ability).present? %></h4>
+        <h4><%= link_to 'Goal Subscriptions', subscriptions_path(goal_id: @goal.id) if @goal.subscriptions.accessible_by(current_ability).present? %></h4>
+      </div>
+      <div class="col-md-6 col-xs-12">
+        <%= render @goal, locals: {goal: @goal} %>
+      </div>
+    </div>
 <% end %>
