--- a/app/views/layouts/_goal.html.erb
+++ b/app/views/layouts/_goal.html.erb
@@ -1,8 +1,6 @@
 <% if @goal.id %>
-    <li><%= link_to 'User', @goal.user %></li>
     <li class="active dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">
-        Goal&nbsp;<span class="caret"></span></a>
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Goal&nbsp;<span class="caret"></span></a>
       <ul class="dropdown-menu" role="menu">
         <% if current_page?(@goal) %>
             <li class="active"><%= link_to 'Show Goal', @goal %></li>
@@ -29,6 +27,7 @@
         <% if @goal.subscriptions.accessible_by(current_ability).present? %>
             <li><%= link_to 'Goal Subscriptions', subscriptions_path(goal_id: @goal.id) %></li>
         <% end %>
+        <li><%= link_to 'Goal User', @goal.user %></li>
       </ul>
     </li>
 <% end %>
