--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,10 @@
 <%= render 'layouts/navigation' %>
 <div class="container">
   <div class="row">
+    <div class="col-xs-12">
       <%= flash_messages %>
       <%= yield %>
+    </div>
   </div>
 </div>
 </body>
