--- a/app/views/scores/_scores.html.erb
+++ b/app/views/scores/_scores.html.erb
@@ -1,20 +1,13 @@
-<table class="table table-hover">
-  <tr class="row">
-    <th colspan="3">Value:</th>
-    <% if params[:user_id] %>
-        <th>Goal:</th>
-    <% elsif params[:goal_id] %>
-        <th>User:</th>
-    <% end %>
-  </tr>
-  <% @scores.each do |score| %>
-      <tr class="row">
-        <td colspan="3"><%= link_to score.value, score %></td>
-        <% if params[:user_id] %>
-            <td><%= link_to score.goal.title, score.goal %></td>
-        <% elsif params[:goal_id] %>
-            <td><%= link_to score.user.name, score.user %></td>
-        <% end %>
-      </tr>
-  <% end %>
-</table>
+<% @scores.each do |score| %>
+    <div class="row">
+      <div class="col-xs-12">
+        <h4><%= score.value %></h4>
+        Goal: <%= link_to score.goal.title, score.goal %>,
+        User: <%= link_to score.user.name, score.user %>
+        <br>
+        <%= link_to 'Show', score %>
+        <%= link_to 'Delete', score, method: :delete, data: {confirm: 'Are you sure?'} if can? :destroy, score %>
+      </div>
+    </div>
+    <hr>
+<% end %>
