--- a/app/views/tokens/_token.html.erb
+++ b/app/views/tokens/_token.html.erb
@@ -1,13 +1,6 @@
-<table class="table table-hover">
-  <tr class="row">
-    <td>Image</td>
-    <th>Provider:</th>
-    <th colspan="2">Expires At:</th>
-  </tr>
-  <tr class="row">
-    <td><%= image_tag token.image %></td>
-    <td><%= link_to token.provider, token %></td>
-    <td><%= token.expires_at.to_formatted_s(:short) %></td>
-    <td><%= link_to 'Delete', token, method: :delete, data: {confirm: 'Are you sure?'} if can? :destroy, token %></td>
-  </tr>
-</table>
+<h4>User: <%= link_to token.user.name, token.user %></h4>
+<h4><%= image_tag token.image, width: '50', height: '50' %></h4>
+<h4>UID: <b><%= token.uid %></b></h4>
+<h4>Expires At: <b><%= token.expires_at.to_formatted_s(:short) %></b></h4>
+<h4>Access token: <b><%= token.access_token %></b></h4>
+<h4>Refresh token: <b><%= token.refresh_token %></b></h4>
