--- a/app/views/tokens/show.html.erb
+++ b/app/views/tokens/show.html.erb
@@ -1,4 +1,12 @@
+<% session[:referrer] = request.referrer %>
 <%= content_for :title, t('tokens.title.show') %>
-<%= render layout: 'layouts/panel', locals: {title: 'Showing Token', resource: nil} do %>
-    <%= render partial: 'token', locals: {action: :show, token: @token} %>
+<%= render layout: 'layouts/jumbotron', locals: {title: @token.provider, paginatable: nil} do %>
+    <div class="row">
+      <div class="col-md-6 col-xs-12">
+        <h4><%= link_to 'Delete', @token, method: :delete, data: {confirm: 'Are you sure?'} if can? :destroy, @token %></h4>
+      </div>
+      <div class="col-md-6 col-xs-12">
+        <%= render @token, locals: {token: @token} %>
+      </div>
+    </div>
 <% end %>
