--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,61 +1,14 @@
-<table class="table table-hover">
-  <tr class="row">
-    <td>Name: <b><%= link_to user.name, user %></b></td>
-    <td>
-      <% if user_signed_in? && current_user.admin? %>
-          <%= link_to 'Edit', edit_admin_user_path(user) %>
-      <% else %>
-          <%= link_to 'Edit', edit_user_registration_path if can? :update, user %>
-      <% end %></td>
-    <td>
-      <% if user_signed_in? && current_user.admin? %>
-          <% if user.active? %>
-              <%= link_to 'Deactivate User', admin_user_path(user), method: :delete,
-                          data: {confirm: 'Are you sure?'} %>
-          <% else %>
-              <%= link_to 'Activate User', admin_user_path(user, user: {status: :active}), method: :put %>
-          <% end %>
-      <% else %>
-          <%= link_to 'Deactivate User', cancel_user_registration_path,
-                      data: {confirm: 'Are you sure?'} if can? :destroy, user %>
-
-      <% end %></td>
-    <td></td>
-  </tr>
-  <% if user_signed_in? && (current_user.admin? || current_user == user) %>
-      <tr class="row">
-        <td colspan="4">Email: <b><%= mail_to user.email, user.email %></b></td>
-      </tr>
-  <% end %>
-  <tr class="row">
-  </tr>
-  <tr class="row">
-    <td colspan="4">Score: <b><%= Score.total_for_user user %></b></td>
-  </tr>
-  <tr class="row">
-    <td colspan="4">Status: <b><%= user.status %></b></td>
-  </tr>
-  <tr class="row">
-    <td colspan="4">Role: <b><%= user.role %></b></td>
-  </tr>
-  <% if user_signed_in? && (current_user.admin? || current_user == user) %>
-      <tr class="row">
-        <td colspan="4">Authentication Token: <b><%= user.authentication_token %></b></td>
-      </tr>
-  <% end %>
-  <tr class="row">
-    <td colspan="4">
-      Joined on: <b><%= user.created_at.to_formatted_s(:short) %></b></td>
-  </tr>
-  <tr class="row">
-    <td colspan="4">
-      <% if user.current_sign_in_at %>
-          Last logged in on: <b><%= user.current_sign_in_at.to_formatted_s(:short) %></b>
-      <% else %>
-          Never logged in.
-      <% end %></td>
-  </tr>
-  <tr class="row">
-    <td colspan="4">No. times logged in: <b><%= user.sign_in_count %></b></td>
-  </tr>
-</table>
+<h4>Score: <b><%= Score.total_for_user user %></b></h4>
+<% if user_signed_in? && (current_user.admin? || current_user == user) %>
+    <h4>Email: <b><%= user.email %></b></h4>
+    <h4>Authentication Token: <b><%= user.authentication_token %></b></h4>
+<% end %>
+<h4>Status: <b><%= user.status %></b></h4>
+<h4>Role: <b><%= user.role %></b></h4>
+<h4>Joined on: <b><%= user.created_at.to_formatted_s(:short) %></b></h4>
+<h4>No. times logged in: <b><%= user.sign_in_count %></b></h4>
+<% if user.current_sign_in_at %>
+    <h4>Last logged in on: <b><%= user.current_sign_in_at.to_formatted_s(:short) %></b></h4>
+<% else %>
+    <h4>Never logged in.</h4>
+<% end %>
