--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -1,38 +1,20 @@
-<table class="table table-hover">
-  <tr class="row">
-    <th>Name:</th>
-    <th colspan="3">
-      <% if user_signed_in? && (current_user.admin? || current_user == @user) %>
-          Email:
-      <% end %></th>
-  </tr>
-  <% @users.each do |user| %>
-      <tr class="row">
-        <td><%= link_to user.name, user %></td>
-        <td>
-          <% if user_signed_in? && (current_user.admin? || current_user == @user) %>
-              <%= mail_to user.email, user.email %>
-          <% end %></td>
-        <td>
-          <% if user_signed_in? && current_user.admin? %>
-              <%= link_to 'Edit', edit_admin_user_path(user) %>
-          <% else %>
-              <%= link_to 'Edit', edit_user_registration_path if can? :update, user %>
-          <% end %></td>
-        <td>
-          <% if user_signed_in? && current_user.admin? %>
-              <% if user.active? %>
-                  <%= link_to 'Deactivate User', admin_user_path(user), method: :delete,
-                              data: {confirm: 'Are you sure?'} %>
-              <% else %>
-                  <%= link_to 'Activate User', admin_user_path(user, user: {status: :active}),
-                              method: :put %>
-              <% end %>
-          <% else %>
-              <%= link_to 'Deactivate User', cancel_user_registration_path,
-                          data: {confirm: 'Are you sure?'} if can? :destroy, user %>
-
-          <% end %></td>
-      </tr>
-  <% end %>
-</table>
+<% @users.each do |user| %>
+    <div class="row">
+      <div class="col-xs-12">
+        <h4><%= user.name %></h4>
+        <%= link_to 'Show', user %>
+        <% if user_signed_in? && current_user.admin? %>
+            <%= link_to 'Edit', edit_admin_user_path(user) %>
+            <% if user.active? %>
+                <%= link_to 'Deactivate', admin_user_path(user), method: :delete, data: {confirm: 'Are you sure?'} %>
+            <% else %>
+                <%= link_to 'Activate', admin_user_path(user, user: {status: :active}), method: :put %>
+            <% end %>
+        <% else %>
+            <%= link_to 'Edit', edit_user_registration_path if can? :update, user %>
+            <%= link_to 'Deactivate', cancel_user_registration_path, data: {confirm: 'Are you sure?'} if can? :destroy, user %>
+        <% end %>
+      </div>
+    </div>
+    <hr>
+<% end %>
