--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,11 +1,16 @@
 <%= content_for :title, t('comments.title.index') %>
-<% if params[:user_id] %>
+
+<% if params[:user] %>
     <% title = 'User Comments' %>
-<% elsif params[:goal_id] %>
+<% elsif params[:goal] %>
     <% title = 'Goal Comments' %>
 <% else %>
     <% title = 'Comments' %>
 <% end %>
+
 <%= render layout: 'layouts/jumbotron', locals: {title: title, paginatable: @comments} do %>
-    <%= render 'comments' %>
+    <% @comments.each do |comment| %>
+        <%= render partial: 'controls', locals: {comment: comment} %>
+        <%= render comment, locals: {comment: comment} %>
+    <% end %>
 <% end %>
