--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -3,16 +3,8 @@
     <div class="form-group">
       <%= f.label :comment, class: 'control-label' %>
       <%= f.text_area :body, class: 'form-control', placeholder: 'Body' %>
-      <% if comment.goal %>
-          <%= f.hidden_field :goal_id, value: comment.goal_id %>
-      <% else %>
-          <%= f.hidden_field :goal_id, value: comment.goal.id %>
-      <% end %>
-      <% if comment.user %>
-          <%= f.hidden_field :user_id, value: comment.user_id %>
-      <% elsif user_signed_in? %>
-          <%= f.hidden_field :user_id, value: current_user.id %>
-      <% end %>
+      <%= f.hidden_field :goal_id, value: comment.goal_id %>
+      <%= f.hidden_field :user_id, value: current_user.id unless comment.user.present? %>
       <%= f.submit class: 'btn btn-default' %>
     </div>
 <% end %>
