--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,13 +1,8 @@
-<% session[:referrer] = request.referrer %>
 <%= content_for :title, t('comments.title.show') %>
-<%= render layout: 'layouts/jumbotron', locals: {title: @comment.body, paginatable: nil} do %>
-    <div class="row">
-      <div class="col-md-6 col-xs-12">
-        <h4><%= link_to 'Edit', edit_comment_path(@comment) if can? :update, @omment %></h4>
-        <h4><%= link_to 'Delete', @comment, method: :delete, data: {confirm: 'Are you sure?'} if can? :destroy, @comment %></h4>
-      </div>
-      <div class="col-md-6 col-xs-12">
-        <%= render @comment, locals: {comment: @comment} %>
-      </div>
-    </div>
+
+<% title = 'Show Comment' %>
+
+<%= render layout: 'layouts/jumbotron', locals: {title: title, paginatable: nil} do %>
+    <%= render partial: 'controls', locals: {comment: @comment} %>
+    <%= render @comment, locals: {comment: @comment} %>
 <% end %>
