--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,9 @@
 <%= devise_error_messages! %>
 <%= content_for :title, t('users.registration.title.edit') %>
-<%= render layout: 'layouts/jumbotron', locals: {title: "Editing #{resource_name.to_s.humanize}", paginatable: nil} do %>
+
+<% title = "Editing #{resource_name.to_s.humanize}" %>
+
+<%= render layout: 'layouts/jumbotron', locals: {title: title, paginatable: nil} do %>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name),
                  html: {method: :put, role: 'form', class: 'form-horizontal'}) do |f| %>
         <div class="authform">
