--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -2,19 +2,22 @@
 <%= form_for(goal, url: {controller: :goals, action: action}, html: {class: 'form-horizontal'}) do |f| %>
     <div class="form-group">
       <%= f.label :title, class: 'col-sm-2 control-label' %>
-      <div class="col-sm-10">
+      <div class="col-sm-8">
         <%= f.text_field :title, class: 'form-control', placeholder: 'Title' %>
       </div>
+      <div class="col-sm-2"></div>
     </div>
     <div class="form-group">
       <%= f.label :text, class: 'col-sm-2 control-label' %>
-      <div class="col-sm-10">
+      <div class="col-sm-8">
         <%= f.text_area :text, class: 'form-control', placeholder: 'Text' %>
       </div>
+      <div class="col-sm-2"></div>
     </div>
     <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
+      <div class="col-sm-offset-2 col-sm-8">
         <%= f.submit class: 'btn btn-default' %>
       </div>
+      <div class="col-sm-2"></div>
     </div>
 <% end %>
