--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -1,9 +1,7 @@
 <%= content_for :title, t('goals.title.new') %>
-<%= render layout: 'layouts/jumbotron', locals: {title: 'New Goal', paginatable: nil} do %>
-    <div class="row">
-      <div class="col-md-6 col-xs-12"></div>
-      <div class="col-md-6 col-xs-12">
-        <%= render partial: 'form', locals: {action: :create, goal: Goal.new} %>
-      </div>
-    </div>
+
+<% title = 'New Goal' %>
+
+<%= render layout: 'layouts/jumbotron', locals: {title: title, paginatable: nil} do %>
+    <%= render partial: 'form', locals: {action: :create, goal: Goal.new} %>
 <% end %>
