--- a/app/views/layouts/_comment.html.erb
+++ b/app/views/layouts/_comment.html.erb
@@ -1,5 +1,5 @@
 <li class="active dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Comment&nbsp;<span class="caret"></span></a>
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Comment <span class="caret"></span></a>
   <ul class="dropdown-menu" role="menu">
     <% if current_page?(@comment) %>
         <li class="active"><%= link_to 'Show Comment', @comment %></li>
