--- a/app/views/layouts/_goal.html.erb
+++ b/app/views/layouts/_goal.html.erb
@@ -1,6 +1,6 @@
 <% if @goal.id %>
     <li class="active dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Goal&nbsp;<span class="caret"></span></a>
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Goal <span class="caret"></span></a>
       <ul class="dropdown-menu" role="menu">
         <% if current_page?(@goal) %>
             <li class="active"><%= link_to 'Show Goal', @goal %></li>
@@ -19,13 +19,10 @@
         <% end %>
         <li class="divider"></li>
         <% if @goal.comments.accessible_by(current_ability).present? %>
-            <li><%= link_to 'Goal Comments', comments_path(goal_id: @goal.id) %></li>
-        <% end %>
-        <% if @goal.scores.accessible_by(current_ability).present? %>
-            <li><%= link_to 'Goal Scores', scores_path(goal_id: @goal.id) %></li>
+            <li><%= link_to 'Goal Comments', comments_path(goal: @goal) %></li>
         <% end %>
         <% if @goal.subscriptions.accessible_by(current_ability).present? %>
-            <li><%= link_to 'Goal Subscriptions', subscriptions_path(goal_id: @goal.id) %></li>
+            <li><%= link_to 'Goal Subscriptions', subscriptions_path(goal: @goal) %></li>
         <% end %>
         <li><%= link_to 'Goal User', @goal.user %></li>
       </ul>
