--- a/app/views/layouts/_jumbotron.html.erb
+++ b/app/views/layouts/_jumbotron.html.erb
@@ -2,10 +2,14 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h1><b><%= title %></b></h1>
+        <h1><%= title %></h1>
       </div>
     </div>
-    <%= yield %>
+    <div class="row">
+      <div class="col-xs-12">
+        <%= yield %>
+      </div>
+    </div>
     <% if paginatable.present? %>
         <div class="row">
           <div class="col-xs-12">
