--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,8 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-              data-target=".navbar-collapse">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -28,7 +27,7 @@
             <% end %>
         <% end %>
 
-        <% if @goals and not params[:user_id] %>
+        <% if @goals and not @user %>
             <li class="active"><%= link_to 'Goals', goals_path %></li>
         <% else %>
             <li><%= link_to 'Goals', goals_path %></li>
@@ -40,14 +39,18 @@
             <li><%= link_to 'Users', users_path %></li>
         <% end %>
 
-        <%= render 'layouts/goals' if @goals %>
-        <%= render 'layouts/goal' if @goal %>
+        <% if @goals %>
+            <%= render 'layouts/goals' %>
+        <% elsif @goal and not (@comments or @scores or @subscriptions) %>
+            <%= render 'layouts/goal' %>
+        <% end %>
 
-        <% if current_page?(new_user_session_path) || current_page?(controller: 'devise/sessions', action: :new) %>
+        <% if current_page?(new_user_session_path) %>
             <li class="active"><%= link_to 'Sign in', new_user_session_path %></li>
         <% elsif current_page?(new_user_registration_path) %>
             <li class="active"><%= link_to 'Sign up', new_user_registration_path %></li>
-        <% elsif (@user and not @tokens) || current_page?(edit_user_registration_path) || current_page?(controller: 'users/registrations', action: :edit) %>
+        <% elsif @user and not (@comments or @goals or @scores or @subscriptions or @tokens) ||
+                current_page?(edit_user_registration_path) %>
             <%= render 'layouts/user' %>
         <% end %>
 
@@ -55,7 +58,7 @@
         <%= render 'layouts/comments' if @comments %>
         <%= render 'layouts/score' if @score %>
         <%= render 'layouts/scores' if @scores %>
-        <%= render 'layouts/subscription' if @subscription %>
+        <%= render 'layouts/subscription' if @subscription unless @goal %>
         <%= render 'layouts/subscriptions' if @subscriptions %>
         <%= render 'layouts/token' if @token %>
         <%= render 'layouts/tokens' if @tokens %>
@@ -67,12 +70,24 @@
         <% end %>
 
       </ul>
+      <%= form_tag search_goals_path, method: :get, class: 'navbar-form navbar-left' do %>
+          <div class="form-group input-group">
+            <div class="input-group-addon">Goals:</div>
+            <%= search_field_tag :q, nil, class: 'form-control' %>
+          </div>
+          <div class="form-group">
+            <%= submit_tag 'Search', class: 'btn btn-default' %>
+          </div>
+      <% end %>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
              aria-expanded="false">
-            <i class="glyphicon glyphicon-user"></i>&nbsp;
-            <%= current_user.name if user_signed_in? %>&nbsp;<span class="caret"></span></a>
+            <i class="glyphicon glyphicon-user"></i>
+            <% if user_signed_in? %>
+                <%= current_user.name %>  <span class="badge"><%= current_user.score %></span>
+            <% end %>
+            <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <%= render 'devise/menu/registration_items' %>
             <%= render 'devise/menu/login_items' %>
