--- a/app/views/layouts/_subscription.html.erb
+++ b/app/views/layouts/_subscription.html.erb
@@ -1,5 +1,5 @@
 <li class="active dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Subscription&nbsp;<span class="caret"></span></a>
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Subscription <span class="caret"></span></a>
   <ul class="dropdown-menu" role="menu">
     <% if can? :update, @subscription %>
         <% if current_page?(edit_subscription_path @subscription) %>
@@ -9,8 +9,7 @@
         <% end %>
     <% end %>
     <% if can? :destroy, @subscription %>
-        <li><%= link_to 'Delete Subscription', @subscription, method: :delete,
-                        data: {confirm: 'Are you sure?'} %></li>
+        <li><%= link_to 'Delete Subscription', @subscription, method: :delete, data: {confirm: 'Are you sure?'} %></li>
     <% end %>
     <li class="divider">
     <li><%= link_to 'Subscription Goal', @subscription.goal %></li>
