--- a/app/views/layouts/_token.html.erb
+++ b/app/views/layouts/_token.html.erb
@@ -1,5 +1,5 @@
 <li class="active dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Token&nbsp;<span class="caret"></span></a>
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Token <span class="caret"></span></a>
   <ul class="dropdown-menu" role="menu">
     <% if current_page?(@token) %>
         <li class="active"><%= link_to 'Show Token', @token %></li>
