--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,10 +1,9 @@
 <%= content_for :title, t('about.title') %>
-<%= render layout: 'layouts/jumbotron', locals: {title: 'About', paginatable: nil} do %>
-    <div class="row">
-      <div class="col-xs-12">
-        <p>
-          This web application was created by
-        </p>
-      </div>
-    </div>
+
+<% title = 'About' %>
+
+<%= render layout: 'layouts/jumbotron', locals: {title: title, paginatable: nil} do %>
+    <p>
+      This web application was created by
+    </p>
 <% end %>
