--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,30 +1,22 @@
 <%= content_for :title, t('home.title') %>
-<%= render layout: 'layouts/jumbotron', locals: {title: 'Home', paginatable: nil} do %>
+
+<% title = 'Home' %>
+<% highest_user = User.with_highest_score || User.new %>
+<% highest_goal = Goal.with_highest_score || Goal.new %>
+
+<%= render layout: 'layouts/jumbotron', locals: {title: title, paginatable: nil} do %>
     <div class="row">
       <div class="col-xs-12">
-        <p><%= link_to 'Goals', goals_path %>: <%= Goal.count %> created</p>
-        <%= form_tag goals_path, method: :get, class: 'form-inline' do %>
-            <div class="form-group">
-              <div class="input-group">
-                <div class="input-group-addon">Goals:</div>
-                <%= search_field_tag :filter_title, nil, class: 'form-control' %>
-              </div>
-            </div>
-            <div class="form-group">
-              <%= submit_tag 'Search', class: 'btn btn-default' %>
-            </div>
-        <% end %>
-        <p>&nbsp;</p>
-
-        <p><%= link_to 'Users', users_path %>: <%= User.where(status: 'active').count %> registered</p>
-
-        <p>Comments: <%= Comment.count %> created</p>
-
-        <p>Tokens: <%= Token.count %> created</p>
-
-        <p>Subscriptions: <%= Subscription.count %> created</p>
-
-        <p>Scores: <%= Score.count %> created</p>
+        <%= link_to highest_user.name, highest_user %> <%= link_to highest_user.score, scores_path(user: highest_user), class: 'badge' %>
+        has the highest User score!<br>
+        <%= link_to highest_goal.title, highest_goal %> <%= link_to highest_goal.score, scores_path(goal: highest_goal), class: 'badge' %>
+        has the highest Goal score!<br>
+        <%= link_to 'Comments', comments_path %>: <%= Comment.count %> created<br>
+        <%= link_to 'Goals', goals_path %>: <%= Goal.count %> created<br>
+        <%= link_to 'Scores', scores_path %>: <%= Score.count %> created<br>
+        <%= link_to 'Subscriptions', subscriptions_path %>: <%= Subscription.count %> created<br>
+        Tokens: <%= Token.count %> created<br>
+        <%= link_to 'Users', users_path %>: <%= User.where(status: 'active').count %> registered<br>
       </div>
     </div>
 <% end %>
