--- a/app/views/subscriptions/_form.html.erb
+++ b/app/views/subscriptions/_form.html.erb
@@ -1,14 +1,10 @@
 <%= errors_for subscription %>
-<%= form_for(subscription, url: {controller: :subscriptions, action: action}, html: {class: 'form-horizontal'}) do |f| %>
+<%= form_for(subscription, url: {controller: :subscriptions, action: action}, html: {class: 'form'}) do |f| %>
     <div class="form-group">
-      <%= f.label :completed, class: 'col-sm-2 control-label' %>
-      <div class="col-sm-10">
-        <%= f.check_box :completed, class: 'form-control' %>
-      </div>
+      <%= f.label :completed, class: 'control-label' %>
+      <%= f.check_box :completed, class: 'form-control' %>
     </div>
     <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <%= f.submit class: 'btn btn-default' %>
-      </div>
+      <%= f.submit class: 'btn btn-default' %>
     </div>
 <% end %>
